sass/_minnehack.scss
@import "mixins";
@import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,700");
$primaryFont: "Open Sans";
$primaryColor: #fec503;

body {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

* {
    box-sizing: border-box;
}

@mixin colored-box($color, $lighten) {
    border-top-left-radius: 10px;
    border-bottom-right-radius: 10px;
    /* border: 1px solid darken($color, 10%); */
    h2 {
        margin: 0;
        padding: 10px;
        font-weight: 400;
        border-top-left-radius: 10px;
        background-color: lighten($color, $lighten / 2);
    }
    div {
        margin: 0;
        padding: 10px;
        border-bottom-right-radius: 10px;
        background-color: lighten($color, $lighten);
        p {
            margin: 8px;
        }
    }
}

//
.navbar {
    a {
        text-decoration: none;
    }
    ul li {
        display: inline;
    }
    background-color: black;
    ul.title.links {
        margin: 0;
        padding-left: 0;
        padding-top: 20px;
        padding-bottom: 20px;
        box-sizing: border-box;
        text-align: center;
    }
    table {
        width: 100%;
        h1 a {
            color: $primaryColor;
        }
        @media (max-width: 768px) {
            td {
                display: block;
                &.title {
                    text-align: center;
                }
                &.linkcell {
                    text-align: center;
                    ul {
                        text-align: center;
                        padding: 0;
                        display: block !important;
                    }
                }
            }
            margin-bottom: 40px;
        }
        td.linkcell{
            text-align: right;
            ul.page.links {
                display: inline;
                li {
                }
            }
        }
    }
    ul.links a {
        margin: 0 5px;
        color: $primaryColor;
        font-weight: 400;
        padding: 10px 18px;
        &.btn {
            background-color: $primaryColor;
            border-radius: 6px;
            color: black;
            &:hover {
                background-color: lighten($primaryColor, 10%);
            }
        }
    }
}

.masthead {
    background-image: url(/images/background.jpg);
    background-size: cover;
    background-position: center;
    .overlay {
        $mastheadPadding: 80px;
        padding-top: $mastheadPadding;
        padding-bottom: $mastheadPadding;
        background-color: rgba(lighten(black, 15%), 0.85);
        text-align: center;
        margin-bottom: $mastheadPadding * 0.5;
        color: lighten($primaryColor, 10%);
        #title {
            font-weight: 700;
            font-size: 3.8em;
            margin: 0;
        }
        #tagline {
            font-weight: 300;
            font-style: italic;
            margin: 0;
        }
        #dates {
            font-weight: 400;
            margin: 0;
        }
    }
    .btn {
        margin: 10px 5px;
        color: $primaryColor;
        font-weight: 400;
        padding: 10px 18px;
        background-color: $primaryColor;
        border-radius: 6px;
        text-decoration: none;
        color: black;
        &:hover {
            background-color: lighten($primaryColor, 10%);
        }
    }
}

#mlh-trust-badge {
    @media only screen and (min-width: 60em) {
        display: block;
        max-width: 100px;
        min-width: 60px;
        position: fixed;
        left: 20px;
        top: 0;
        width: 10%;
        z-index: 10000;
    }
    @media (max-width: 60em) {
        display:none;
    }
}

.row#faq, .sponsors {
    div.box.platinum { @include colored-box(#D0D0D0, 15%); }
    div.box.gold { @include colored-box(#BB9922, 30%); }
	div.box.electrum { @include colored-box(#AA995E, 30%); }
    div.box.silver{ @include colored-box(#999999, 30%); }
    div.box.bronze{ @include colored-box(#996633, 30%); }
}

main {
	flex-grow: 1;
}

footer {
    background-color: lighten($primaryColor, 40%);
    padding-top: 30px;
    padding-bottom: 30px;
    margin-top: 60px;
    text-align: center;
    :not(#footer-links) a {
        @include colored-link(1px, $textColor);
    }
    #footer-links {
        margin: 0;
        margin-bottom: 15px;
        font-size: 1.5em;
        a {
            color: #000;
            text-decoration: none;
            margin: 0 8px;
        }
    }
}

.sponsors {
    h2 {
        text-align: left;
    }
    p {
        text-align: justify;
    }
}

.no-bullets { list-style: none; }

#contact-form, .sponsorship {
	display: flex;
	flex-direction: column;
}

.sponsorship > .box { margin-top: 2em; }

.sponsor-logos {
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

.sponsor-logos > a {
    margin: 1em;
    display: inline-block;
}

.platinum .sponsor-logos > img { width: 22em; }
.platinum .sponsor-logos > a > img { width: 22em; }
.gold .sponsor-logos > img { width: 20em; }
.gold .sponsor-logos > a > img { width: 20em; }
.electrum .sponsor-logos > img { width: 17em; }
.electrum .sponsor-logos > a > img { width: 17em; }
.silver .sponsor-logos > img { width: 15em; }
.silver .sponsor-logos > a > img { width: 15em; }
.bronze .sponsor-logos > img { width: 10em; }
.bronze .sponsor-logos > a > img { width: 10em; }
.grinkus .sponsor-logos > img { width: 10em; }
.grinkus .sponsor-logos > a > img { width: 10em; }

.sponsor-perks { flex-grow: 1; }

.sponsor-blurb {
	display: none;
}

.sponsor-blurb:target {
	display: block;
}

.sponsor-blurb > a > img {
	width: 20em;
}

th {
    text-align: left;
}

@media (max-width: 700px) {
	.sponsor-logos { flex-wrap: wrap; }
}

form.signupform {
    display: block;
    background-color: darken(white, 5%);
    padding: 8px;

    input {
        padding: 8px;
        font-size: 1.1em;
        outline: none;
        font-family: $primaryFont;
    }

    input[type=submit] {
        background-color: lighten($primaryColor, 5%);
        border: 1px solid darken($primaryColor, 20%);
    }
}

form.signupform2 {
    max-width: 540px;
    display: block;
    background-color: darken(white, 5%);
    padding: 8px;

    div:not(:last-child) {
        margin-bottom: 8px;
    }

    input:not([type=checkbox]), textarea {
        padding: 8px;
        font-size: 1.1em;
        outline: none;
        font-family: $primaryFont;
        &:valid {
            border: 1px solid #999;
        }
        &:invalid {
            border: 1px solid #f63;
            border-left: 4px solid #f63;
        }
    }

    label.container {
        cursor: pointer;
        user-select: none;
        position: relative;
        vertical-align: middle;

        input[type=checkbox] {
            position: absolute;
            opacity: 0;
            cursor: pointer;

            &:checked ~ .checkmark {
                background-color: $primaryColor;
                border: 1px solid darken($primaryColor, 20%);
            }
            &:checked ~ .checkmark:after {
                display: block;
            }
        }
        span.checkmark {
            border: 1px solid #999;
            background-color: white;
            display: inline-block;
            width: 18px;
            height: 18px;
            margin-right: 8px;
            vertical-align: middle;

            &:after {
                content: '';
                display: none;
                position: absolute;

                left: 5px;
                top: 5px;
                width: 5px;
                height: 10px;
                border: solid white;
                border-width: 0 3px 3px 0;
                -webkit-transform: rotate(45deg);
                -ms-transform: rotate(45deg);
                transform: rotate(45deg);
            }
        }
    }

    input:not([type=submit]):not([type=checkbox]), textarea {
        width: 100%;
    }

    input[type=submit] {
        background-color: lighten($primaryColor, 5%);
        border: 1px solid darken($primaryColor, 20%);
    }
}

